--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_URL=mongodb://127.0.0.1/singlesource
 PORT = 3000
 
 SECRET = C06f02kq0117
+
+DEPLOYED_URL = mongodb+srv://ClaudioFlores:Cflores4.@fullstackretailtraining.smyw3i6.mongodb.net/fullstackretailtraining?retryWrites=true&w=majority
